Completed example pages

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery - Basic</title>
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="vanilla-css-gallery.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/vanilla-css-gallery.css">
 	<link rel="stylesheet" href="prism/prism.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
 
 	<h2>Vanilla CSS Gallery - Basic</h2>
 	<p><em>Example of the CSS-only image gallery without any styling. These are the bare basics.</em></p>
-	<p><a href="https://github.com/jelmerdemaat/vanilla-css-gallery">View on GitHub</a> - By <a href="https://twitter.com/jelmerdemaat">@jelmerdemaat</a></p>
+	<p><a href="with-styling.html">View example with additional styling</a> - <a href="https://github.com/jelmerdemaat/vanilla-css-gallery">View on GitHub</a> - By <a href="https://twitter.com/jelmerdemaat">@jelmerdemaat</a></p>
 
 	<hr>
 
