Init gh-pages home.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Vanilla CSS Gallery</title>
+	<link rel="stylesheet" href="examples/css/normalize.css">
+	<link rel="stylesheet" href="css/site.css">
+</head>
+<body>
+	<h1>Vanilla CSS Gallery</h1>
+</body>
+</html>
