Move processed CSS to root folder, adjust examples accordingly.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery - Basic</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/vanilla-css-gallery.css">
+	<link rel="stylesheet" href="../css/vendor/normalize.css">
+	<link rel="stylesheet" href="../css/vanilla-css-gallery.css">
 </head>
 <body>
 
@@ -46,9 +46,6 @@
 			<a href="#deselect" title="Close gallery">&times;</a></li>
 		<li>
 	</ul>
-
-	<hr>
-
 
 </body>
 </html>
