--- a/examples/with-styling.html
+++ b/examples/with-styling.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery - With styling</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/vanilla-css-gallery.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="prism/prism.css">
+	<link rel="stylesheet" href="../css/vendor/normalize.css">
+	<link rel="stylesheet" href="../css/vanilla-css-gallery.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -45,7 +44,6 @@
 			<a href="#deselect">&times;</a></li>
 		<li>
 	</ul>
-	<hr>
 
 		<h3>Additional CSS</h3>
 		<p>No prefixes included.</p>
@@ -111,6 +109,5 @@ img {
 }
 </code></pre>
 
-<script src="prism/prism.js"></script>
 </body>
 </html>
