Added minified styling, cleaned examples.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery - Basic</title>
 	<link rel="stylesheet" href="../css/vendor/normalize.css">
-	<link rel="stylesheet" href="../css/vanilla-css-gallery.css">
+	<link rel="stylesheet" href="../css/vanilla-css-gallery.min.css">
 </head>
 <body>
 
