Updated all CSS from master branch.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/site.css">
-	<link rel="stylesheet" href="css/vanilla-css-gallery.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/vendor/normalize.css">
+	<link rel="stylesheet" href="css/vanilla-css-gallery.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="prism/prism.css">
 </head>
 <body>
 	<h1>Vanilla CSS Gallery</h1>
@@ -116,5 +116,70 @@
 .gallery-item:target ~ .gallery-nav .gallery-close {
   display: block;
 }</code></pre>
+
+		<h3>Additional CSS</h3>
+		<p>No prefixes included.</p>
+		<pre><code class="language-css">.gallery-nav {
+  border-radius: 5px;
+}
+
+.gallery-item {
+  background: black;
+  background: rgba(0, 0, 0, 0.85);
+  transition: all 0.2s ease-out;
+}
+
+.gallery-item img {
+  max-width: 90vw;
+  max-height: 90vh;
+}
+
+.gallery-item:target ~ .gallery-nav {
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  position: fixed;
+}
+
+.gallery-item:target ~ .gallery-nav li {
+  margin: 0 5px 0 0;
+}
+
+.gallery-item:target ~ .gallery-nav img {
+  border: 2px solid white;
+}
+
+.gallery-item:target ~ .gallery-nav .gallery-close {
+  font-size: 20px;
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.85);
+  border-radius: 3px;
+  display: block;
+  position: absolute;
+  left: 105%;
+  top: 0;
+}
+
+.gallery-item img {
+  margin: auto;
+  border: 4px solid white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.gallery-close a {
+  color: white;
+  text-decoration: none;
+  padding: 5px;
+}
+
+img {
+  vertical-align: top;
+}
+</code></pre>
+<script src="prism/prism.js"></script>
 </body>
 </html>
