Added local images

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 	<div class="with-styles">
 		<div class="gallery-item" id="1">
-			<img src="http://placeimg.com/800/600/tech" alt="Tech image" />
+			<img src="images/beach.jpg" alt="A nice image of a beach" />
 		</div>
 		<div class="gallery-item" id="2">
-			<img src="http://placeimg.com/800/600/nature" alt="Nature image" />
+			<img src="images/mountains.jpg" alt="A nice image of mountains" />
 		</div>
 		<div class="gallery-item" id="3">
-			<img src="http://placeimg.com/800/600/arch" alt="Architecture image" />
+			<img src="images/coffee.jpg" alt="A nice image of steaming coffee" />
 		</div>
 
 		<ul class="gallery-nav">
@@ -52,13 +52,13 @@
 	<h2>Example (without styling)</h2>
 
 	<div class="gallery-item" id="4">
-		<img src="http://placeimg.com/800/600/tech" alt="Tech image" />
+		<img src="images/beach.jpg" alt="A nice image of a beach" />
 	</div>
 	<div class="gallery-item" id="5">
-		<img src="http://placeimg.com/800/600/nature" alt="Nature image" />
+		<img src="images/mountains.jpg" alt="A nice image of mountains" />
 	</div>
 	<div class="gallery-item" id="6">
-		<img src="http://placeimg.com/800/600/arch" alt="Architecture image" />
+		<img src="images/coffee.jpg" alt="A nice image of steaming coffee" />
 	</div>
 
 	<ul class="gallery-nav">
