Small overall style changes.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -9,13 +9,13 @@
 <body>
 
 	<div class="gallery-item" id="1">
-		<img src="http://placehold.it/800x600&text=First+image" alt="Tech image">
+		<img src="../images/beach.jpg" alt="A nice beach image">
 	</div>
 	<div class="gallery-item" id="2">
-		<img src="http://placehold.it/800x600&text=Second+image" alt="Nature image">
+		<img src="../images/coffee.jpg" alt="A nice coffee image">
 	</div>
 	<div class="gallery-item" id="3">
-		<img src="http://placehold.it/800x600&text=Third+image" alt="Architecture image">
+		<img src="../images/mountains.jpg" alt="A nice mountains image">
 	</div>
 
 	<h2>Vanilla CSS Gallery - Basic</h2>
@@ -29,17 +29,17 @@
 	<ul class="gallery-nav">
 		<li>
 			<a href="#1">
-				<img src="http://placehold.it/100x70&text=First" alt="Tech image">
+				<img src="../images/beach.jpg" alt="A nice beach image" />
 			</a>
 		</li>
 		<li>
 			<a href="#2">
-				<img src="http://placehold.it/100x70&text=Second" alt="Nature image">
+				<img src="../images/coffee.jpg" alt="A nice coffee image" />
 			</a>
 		</li>
 		<li>
 			<a href="#3">
-				<img src="http://placehold.it/100x70&text=Third" alt="Architecture image">
+				<img src="../images/mountains.jpg" alt="A nice mountains image" />
 			</a>
 		</li>
 		<li class="gallery-close">
