Fix index meta problems.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery</title>
-	<meta type="description">Vanilla CSS Gallery: a lightweight CSS only image gallery</meta>
+	<meta name="description" content="Vanilla CSS Gallery: a lightweight CSS only image gallery">
+	<meta name="keywords" content="css gallery, css only, image gallery, photo gallery, pure css gallery">
 	<link rel="stylesheet" href="css/vendor/normalize.css">
 	<link rel="stylesheet" href="css/vanilla-css-gallery.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
