Fix text errors.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vanilla CSS Gallery</title>
-	<meta name="description" content="Vanilla CSS Gallery: a lightweight CSS only image gallery">
+	<meta name="description" content="Vanilla CSS Gallery: a lightweight CSS-only image gallery">
 	<meta name="keywords" content="css gallery, css only, image gallery, photo gallery, pure css gallery">
 	<link rel="stylesheet" href="css/vendor/normalize.css">
 	<link rel="stylesheet" href="css/vanilla-css-gallery.min.css">
@@ -13,7 +13,7 @@
 <body>
 	<h1>Vanilla CSS Gallery</h1>
 	<p>A simple image gallery made purely out of CSS. No JavaScript. Suitable for when you need a really simple and lightweight solution.</p>
-	<p><a href="https://github.com/jelmerdemaat/vanilla-css-gallery">View on GitHub</a> - By <a href="https://twitter.com/jelmerdemaat">@jelmerdemaat</a> - <a target="_blank" href="https://twitter.com/share?url=http:%2F%2Fjelmerdemaat.github.io%2Fvanilla-css-gallery&via=jelmerdemaat&related=jelmerdemaat&text=Vanilla+CSS+Gallery:+a+lightweight,+CSS+only+image+gallery">Share on Twitter</a></p>
+	<p><a href="https://github.com/jelmerdemaat/vanilla-css-gallery">View on GitHub</a> - By <a href="https://twitter.com/jelmerdemaat">@jelmerdemaat</a> - <a target="_blank" href="https://twitter.com/share?url=http:%2F%2Fjelmerdemaat.github.io%2Fvanilla-css-gallery&via=jelmerdemaat&related=jelmerdemaat&text=Vanilla+CSS+Gallery:+a+lightweight,+CSS-only+image+gallery">Share on Twitter</a></p>
 
 	<hr>
 
