--- a/examples/basic.html
+++ b/examples/basic.html
@@ -5,6 +5,9 @@
 	<title>Vanilla CSS Gallery - Basic</title>
 	<link rel="stylesheet" href="../css/vendor/normalize.css">
 	<link rel="stylesheet" href="../css/vanilla-css-gallery.min.css">
+	<style>
+		.gallery-nav img { max-width: 150px; }
+	</style>
 </head>
 <body>
 
